# CrocoCamp

./: .gitignore  CHANGELOG.md  DOCUMENTATION_CONSISTENCY_REPORT.md  LICENSE  README.md  REFACTORING.md  VISUALIZATION_REFACTOR_SUMMARY.md  config_time_averaging_example.yaml  demo_refactored_usage.py  environment.yml  init_tree.sh  install.sh  pyproject.toml  requirements.txt  test_time_averaging.py
.github/: copilot-instructions.md
.github/agents/: feature-specialist.agent.md  planning-specialist.agent.md  refactor-specialist.agent.md  test-specialist.agent.md
.github/workflows/: ci.yml
configs/: config.yaml  config_template.yaml  config_time_window.yaml  config_tutorial_1.yaml  config_tutorial_2.yaml  input.nml
crococamp/cli/: crococamp_cli.py  download_tutorials_data.py  perfect_model_obs.py  time_averaging.py
crococamp/io/: file_utils.py  model_grid.py  model_tools.py  mom6_time_averager.py  obs_seq.py  obs_seq_tools.py  time_averager.py  time_averaging.py
crococamp/model_adapter/: __init__.py  model_adapter.py  model_adapter_MOM6.py  model_adapter_ROMS.py  model_adapter_ROMS_Rutgers.py  registry.py
crococamp/utils/: __init__.py  cli.py  config.py  input_template.nml  namelist.py  obs_seq_splitting.py
crococamp/viz/: __init__.py  base.py  config.py  interactive_map.py  interactive_profile.py  interactive_widget.py  interactive_widget_map.py  interactive_widget_profile.py
crococamp/workflows/: model_obs.py  workflow.py  workflow_model_obs.py  workflow_template.py
demo/: config.yaml
docs/: obs_seq_splitting.md
examples/: config_with_obs_types.yaml  demo-interactive-profile.ipynb  demo-model-obs-comparison.ipynb  model-obs-comparison.ipynb  mom6_time_averaging_demo.ipynb  obs_seq_splitting_example.py  obs_types_example.py
gh_refs/: header.txt
install/: envpaths.sh.template  envpaths_NCAR.sh  install.sh  install_NCAR.sh  tutorials_download.sh
ref_files/: input.yaml  perfect_model_obs_split_loop.py  regridding_20250716.ipynb
roms_tests/: config_roms_test2.yaml  roms_test_2.ipynb
tests/: conftest.py  test_time_averaging.py
tests/fixtures/: mock_obs_def_ocean_mod.rst
tests/integration/: test_parquet_generation.py  test_workflow_model_obs_integration.py
tests/mocking/: test_perfect_model_obs_mock.py  test_subprocess_mocking.py
tests/unit/: test_adapter.py  test_cli_perfect_model_obs.py  test_config.py  test_config_namelist_edge_cases.py  test_file_utils.py  (+8 more)
tutorials/: CrocoLake_map_temperature.ipynb  MOM6-WOD13-comparison.ipynb  ROMS_tutorial_1-CL-comparison.ipynb  config_tutorial_1.yaml  config_tutorial_2.yaml  config_tutorial_3.yaml  config_tutorial_roms.yaml  model-obs_project.ipynb  tutorial1_MOM6-CL-comparison.ipynb  tutorial2_MOM6-CL-comparison-float.ipynb  tutorial3_CrocoLake_map_temperature.ipynb  tutorial4_MOM6-WOD13-comparison.ipynb
(+16 files in other folders)
