[project]
name = "crococamp"
version = "0.1.0"
description = "Tools for comparing ocean models, observations, and gridded products."
authors = [{ name="Enrico Milanese", email="enrico.milanese@whoi.edu" }]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "cartopy",
    "cftime",
    "dask",
    "ipykernel",
    "ipywidgets",
    "matplotlib",
    "pandas",
    "pyarrow",
    "pyyaml",
    "scipy",
    "shapely",
    "xarray",
]

[project.scripts]
perfect-model-obs = "crococamp.cli.perfect_model_obs:main"
crococamp-time-average = "crococamp.cli.time_averaging:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["crococamp*"]
