[project]
name = "crococamp"
version = "0.1.0"
description = "Python package for comparing ocean models with observations."
authors = [{ name="Enrico Milanese", email="enrico.milanese@whoi.edu" }]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "cartopy",
    "cftime",
    "dask",
    "gsw",
    "ipykernel",
    "ipywidgets",
    "matplotlib",
    "netcdf4",
    "pandas",
    "pyarrow",
    "pyyaml",
    "scipy",
    "shapely",
    "xarray<=2025.07",
]

[project.scripts]
perfect-model-obs = "crococamp.cli.perfect_model_obs:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["crococamp*"]

[tool.setuptools.package-data]
"crococamp" = ["utils/*.nml"]
