[project]
name = "crococamp"
version = "0.1.1"
description = "Python package for comparing ocean models with observations."
authors = [{ name="Enrico Milanese", email="enrico.milanese@whoi.edu" }]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "cartopy<=0.25.0",
    "cftime<=1.6.4",
    "dask<=2025.9.1",
    "gsw<=3.6.20",
    "ipykernel<=6.30.1",
    "ipywidgets<=8.1.7",
    "matplotlib<=3.10.6",
    "netcdf4<=1.7.2",
    "pandas<=2.3.3",
    "pyarrow<=21.0.0",
    "pyyaml<=6.0.3",
    "requests==2.32.5",
    "scipy<=1.16.2",
    "shapely<=2.1.2",
    "tqdm==4.67.1",
    "xarray<=2025.07",
]

[project.scripts]
download_crocolake = "crococamp.cli.download_crocolake:main"
download_tutorials_data = "crococamp.cli.download_tutorials_data:main"
perfect-model-obs = "crococamp.cli.perfect_model_obs:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["crococamp*"]

[tool.setuptools.package-data]
"crococamp" = ["utils/*.nml"]
